UPDATED SLEEP TIMINGS TO IMPROVE STREAMING

--- a/Server/config.conf
+++ b/Server/config.conf
@@ -6,5 +6,5 @@ server.socket_port = 9090
 tools.staticdir.root : '/Users/marcgreenwood/PycharmProjects/DreamboxServer/Server/'
 tools.staticdir.on: True
 tools.staticdir.dir: ''
-tools.responseCheck.on = True
-tools.requestCheck.on = True
+tools.checkrequest.on = True
+tools.checkresponse.on = True
